# horizon-os

./: Cargo.toml  PROGRESS.md
.github/workflows/: ci.yml
crates/aura/: Cargo.toml
crates/aura/src/: error.rs  lib.rs  llama.rs  semantic.rs  tool.rs
crates/boot/src/: lib.rs
crates/cells/: Cargo.toml
crates/cells/src/: error.rs  lib.rs  linux.rs  portal.rs  seccomp.rs
crates/cells/tests/: cells.rs  portal.rs
crates/compositor/: Cargo.toml
crates/compositor/src/: drm.rs  error.rs  layout.rs  lib.rs  render.rs  server.rs  softdrm.rs  winit.rs
crates/compositor/tests/: input.rs  multimonitor.rs  render.rs
crates/constellation/: Cargo.toml
crates/constellation/src/: discovery.rs  label.rs  lib.rs
crates/constellation/src/net/: mod.rs  relay.rs  rendezvous.rs  wire.rs
crates/constellation/tests/: relay.rs  rendezvous.rs
crates/glass/: Cargo.toml
crates/glass/src/: aura.rs  lib.rs  model.rs  raster.rs  report.rs  surface.rs  tests_support.rs
crates/glass/tests/: glass.rs
crates/horizon/: Cargo.toml
crates/horizon/src/: main.rs
crates/identity/: Cargo.toml
crates/identity/src/: error.rs  hardware.rs  lib.rs
crates/init/: Cargo.toml
crates/init/src/: error.rs  lib.rs  linux.rs  main.rs
crates/keybuild/: Cargo.toml
crates/keybuild/src/: cpio.rs  error.rs  fat.rs  lib.rs  luks.rs  main.rs  verity.rs
crates/reconstitution/src/: lib.rs
crates/weave/: Cargo.toml
crates/weave/src/: audit.rs  broker.rs  capability.rs  codec.rs  error.rs  lib.rs
crates/weave/tests/: weave.rs
