[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.96"
license = "Apache-2.0"
authors = ["Thomas Guthrie <officialthomasguthrie@gmail.com>"]
repository = "https://github.com/officialthomasguthrie/horizon"

[workspace.dependencies]
blake3 = "1"
sha2 = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
hex = "0.4"
zstd = "0.13"
clap = { version = "4", features = ["derive"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
