[package]
name = "compositor"
description = "Horizon Wayland compositor: a headless-testable Smithay server, the L5 experience core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
# Software (pixman) offscreen compositing: import client shm buffers and
# composite the Space into an offscreen framebuffer whose pixels can be read
# back. Headless and CI-testable (the readback is asserted on, no display), so
# turning client buffers into pixels is proven the same way the protocol is. The
# default build stays protocol + scene only, with no renderer. Pulls one more
# system library, libpixman.
render = ["smithay/renderer_pixman"]
# Nested winit presentation: open a real window inside an existing Wayland/X
# session and present the composited Space on screen. This is the part that needs
# a display and a GPU, verified by eye, not in CI. Pulls libwayland, EGL, and GL.
winit = ["render", "smithay/backend_winit"]
# Internal marker enabled by both DRM/KMS backends (the GLES `udev` one and the
# software-scanout `softdrm` one). It gates the backend-facing accessors the two
# share (the scene, the shell background and its generation, the per-frame tick),
# so they exist whenever either backend is built without spelling out both
# features at every call site. Not meant to be turned on directly.
drm-backend = ["render"]
# Bare-metal DRM/KMS + libinput backend: drive a real display directly off a GPU,
# with no nesting session, the path Horizon boots into on hardware. Same split as
# winit: it reuses the already-tested compositing and seat routing, so only the
# backend plumbing is new, and that needs a real GPU and a seat, so it is
# compile-checked in CI and eye-verified on bare metal. Unlike winit (whose EGL/GL
# are runtime-loaded), this links system libraries: libdrm, libgbm, libinput,
# libseat, and libudev.
udev = [
    "drm-backend",
    "smithay/backend_drm",
    "smithay/backend_gbm",
    "smithay/backend_libinput",
    "smithay/backend_udev",
    "smithay/backend_session_libseat",
    "smithay/renderer_gl",
    "smithay/renderer_multi",
]
# Software (pixman) DRM/KMS scanout backend: composite with the tested pixman
# renderer into a DRM dumb buffer (plain CPU memory) and page-flip it, with no GPU
# in the path. Where `udev` needs a GBM/GLES device (virtio-gpu with virgl, or real
# hardware with working EGL), this drives any KMS device, including plain
# virtio-gpu and real hardware with no usable GLES, so it is both the QEMU boot
# target and the no-GPU fallback a "boots anywhere" Key wants. It reuses the same
# seat routing and the same whole-space compositing the winit backend presents,
# only swapping the on-screen target for a KMS dumb buffer, so almost nothing here
# is new logic. Smithay's `DrmCompositor` (the plane/damage/page-flip machinery the
# GLES backend also trusts) lives behind `backend_gbm`, so this links libgbm too,
# but never creates a gbm device (the cursor plane is unused) and never calls into
# it: the renderer is pixman (CPU) and the buffers are dumb (CPU), so at runtime
# there is still no GPU, GLES, EGL, or virgl, only libdrm, libgbm, libinput,
# libseat, and libudev.
softdrm = [
    "drm-backend",
    "smithay/backend_drm",
    "smithay/backend_gbm",
    "smithay/backend_libinput",
    "smithay/backend_udev",
    "smithay/backend_session_libseat",
]

[dependencies]
thiserror.workspace = true

# The compositor is a Linux Wayland server built on Smithay. On other hosts the
# crate still compiles (so the workspace builds on darwin) but there is no
# Compositor, only `available()` reporting false. The default build pulls only
# wayland_frontend and desktop: a real Wayland server plus the scene graph, no
# display backend and no renderer, so the core builds and tests headlessly. The
# one system dependency that draws in is libxkbcommon (the seat keyboard compiles
# an xkb keymap); the rest of that stack is pure Rust. The `render` and `winit`
# features add a software renderer and an on-screen backend on top.
[target.'cfg(target_os = "linux")'.dependencies]
smithay = { version = "0.7", default-features = false, features = ["wayland_frontend", "desktop"] }

[dev-dependencies]
tempfile.workspace = true

# The tests drive a real, in-process Wayland client against the server over its
# socket, so they exercise the protocol end to end with no display.
[target.'cfg(target_os = "linux")'.dev-dependencies]
wayland-client = "0.31"
wayland-protocols = { version = "0.32", default-features = false, features = ["client"] }
