[package]
name = "horizon"
description = "Horizon system command line tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
# Build the compositor's software renderer into the CLI: `horizon compositor
# screenshot` dumps a composited frame to an image with no display. Off by
# default so the standard binary stays renderer-free.
compositor-render = ["compositor/render"]
# Build the on-screen (winit) backend in too: `horizon compositor show` opens a
# nested window. Off by default so the standard binary does not pull EGL/GL.
compositor-winit = ["compositor/winit", "compositor-render"]
# Build the bare-metal DRM/KMS backend in: `horizon compositor drm` drives a real
# display directly off the GPU. Off by default so the standard binary does not
# link libdrm/libgbm/libinput/libseat/libudev.
compositor-udev = ["compositor/udev", "compositor-render"]

[dependencies]
lifestream = { path = "../lifestream" }
weave = { path = "../weave" }
constellation = { path = "../constellation" }
reconstitution = { path = "../reconstitution" }
cells = { path = "../cells" }
compositor = { path = "../compositor" }
clap.workspace = true
anyhow.workspace = true
argon2.workspace = true
rand.workspace = true

# The cell demo drives a confined principal with raw syscalls on Linux.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
