[package]
name = "weave"
description = "Object-capability broker and audited IPC for Horizon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lifestream = { path = "../lifestream" }
rand.workspace = true
thiserror.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
